--- a/reactportfolio/src/styles/Body.css
+++ b/reactportfolio/src/styles/Body.css
@@ -2,7 +2,6 @@
 {
   background-image: url("https://www.wallpapertip.com/wmimgs/196-1965497_website-background-wallpaper-wood.jpg");
 }
-@supports (-webkit-text-stroke: 1px black) {
 .aboutMe{
   padding-left: 50px;
   color:rgb(0, 23, 128);
@@ -10,4 +9,8 @@
   font-weight:400;
 
 }
+
+.project{
+  display: flex;
+  flex-direction: column;
 }
