--- a/reactportfolio/src/styles/Header.css
+++ b/reactportfolio/src/styles/Header.css
@@ -18,4 +18,16 @@ header{
 
 }
 
+footer{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
+#resume, #contact{
+  padding-left:20px
+}
+
 
